--- a/src/output.css
+++ b/src/output.css
@@ -554,6 +554,103 @@ video {
   display: none;
 }
 
+.flex {
+  display: flex;
+}
+
+.h-\[75vh\] {
+  height: 75vh;
+}
+
+.h-screen {
+  height: 100vh;
+}
+
+.h-\[35px\] {
+  height: 35px;
+}
+
+.w-\[75vh\] {
+  width: 75vh;
+}
+
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.w-\[\] {
+  width: ;
+}
+
+.w-\[\$\] {
+  width: $;
+}
+
+.w-\[\$\{\}\] {
+  width: ${};
+}
+
+.w-\[35px\] {
+  width: 35px;
+}
+
+.w-\[35\.45px\] {
+  width: 35.45px;
+}
+
+.w-\[\$px\] {
+  width: $px;
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.gap-5 {
+  gap: 1.25rem;
+}
+
+.border {
+  border-width: 1px;
+}
+
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
+}
+
+.bg-green-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity, 1));
+}
+
+.bg-green-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(21 128 61 / var(--tw-bg-opacity, 1));
+}
+
+.bg-green-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(74 222 128 / var(--tw-bg-opacity, 1));
+}
+
+.p-3 {
+  padding: 0.75rem;
+}
+
 .text-3xl {
   font-size: 1.875rem;
   line-height: 2.25rem;
@@ -563,11 +660,7 @@ video {
   font-weight: 700;
 }
 
-.text-red-400 {
+.text-red-500 {
   --tw-text-opacity: 1;
-  color: rgb(248 113 113 / var(--tw-text-opacity, 1));
-}
-
-.underline {
-  text-decoration-line: underline;
+  color: rgb(239 68 68 / var(--tw-text-opacity, 1));
 }
